--- a/style.css
+++ b/style.css
@@ -1,1 +1,98 @@
+* {
+  box-sizing: border-box;
+}
+body {
+  font-family: verdana, sans-serif;
+  }
+  .classh1 {
+  color: white;
+  font-size: 250%;
+}
+#idheader {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
 
+.liheader {
+  float: left;
+}
+
+.liheader a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 16px;
+  text-decoration: none;
+}
+
+.liheader a:hover {
+  background-color: orange;
+}
+.lisite {
+  float: left;
+}
+
+.lisite a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 16px;
+  text-decoration: none;
+}
+
+.lisite a:hover {
+  background-color: navy;
+}
+  /* Style the header */
+header {
+  background-color: navy;
+  padding: 15px;
+  text-align: left;
+  font-size: 100%;
+  color: white;
+}
+ /* Create two columns/boxes that floats next to each other */
+nav {
+  float: left;
+  width: 10%;
+  background: orange;
+  padding: 20px;
+}
+
+/* Style the list inside the menu */
+nav ol {
+  list-style-type: none;
+  padding: 0;
+  color:orange;
+}
+
+article {
+  float: left;
+  padding: 20px;
+  width: 90%;
+  background-color: #f1f1f1; 
+}
+
+/* Clear floats after the columns */
+section:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Style the footer */
+footer {
+  background-color: navy;
+  padding: 10px;
+  text-align: center;
+  color: white;
+}
+
+/* Responsive layout - makes the two columns/boxes stack on top of each other instead of next to each other, on small screens */
+@media (max-width: 600px) {
+  nav, article {
+    width: 100%;
+    height: auto;
+  }
