--- a/style.css
+++ b/style.css
@@ -18,7 +18,19 @@ body {
 	transition-duration: .5s;
   margin-top: 15px;
 }
+  .inhoud {
+	background: navy;
+	border: none;
+	padding: 10px;
+	color: white;
+	font-size: 16px;
+	transition-duration: .5s;
+  margin-top: 15px;
+}
 #jj {
+float: left;
+}
+#gedicht {
 float: left;
 }
 #idheader {
