--- a/style.css
+++ b/style.css
@@ -25,12 +25,16 @@ body {
 	padding: 10px;
 	color: white;
 	font-size: 16px;
-	transition-duration: .5s;
-  margin-top: 15px;
+        margin-top: 15px;
 }
 .inhoud a:hover {
   background-color: white;
+  border: none;
+  border-radius: 0px;
+  padding: 10px;
   color: navy;
+  font-size: 16px;
+  margin-top: 15px;
 }
 #jj {
 margin-left: 250px;
