--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body {
 	font-size: 16px;
         margin-top: 15px;
 }
-.inhoud a:hover {
+.inhoud a:hover a {
   background-color: white;
   border: none;
   border-radius: 0px;
