--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body {
 	background: navy;
 	border: none;
 	border-radius: 0px;
+	padding: 10px;
 	color: white;
 	font-size: 16px;
         margin-top: 15px;
